--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.24.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -20,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.18",
     "yup": "^1.7.1",
     "zustand": "^5.0.9"
