--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^1.38.0",
+    "axios": "^1.13.4",
     "bcryptjs-react": "^2.4.6",
     "body-parser": "^2.2.1",
     "cloudinary": "^2.8.0",
@@ -23,8 +25,10 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.1",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
+    "openai": "^6.17.0",
     "socket.io": "^4.8.3",
     "twilio": "^5.11.1"
   }
